--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 								<span class="image main"><img src="images/MEME.jpg" alt="" /></span>
 								<p>Hello! My name is Kushagra Kataria, and I'm excited to share my experiences, achievements, and skills with you.
 									I have put a lot of effort into improving my abilities and pursuing my interests throughout my personal journey. You can discover examples of my work, projects, and accomplishments that I'm particularly proud of in this portfolio.
-									This showcase not only displays my work but also gives me a chance to think back on my experiences thus far and make plans for the future. I'm constantly trying to learn, develop, and get better, and I think that this portfolio will make it easier for me to do those things.</p>
+									This showcase not only displays my work but also gives me a chance to think back on my experiences and make plans for the future. I'm constantly trying to learn, develop, and get better, and I think that this portfolio will make it easier for me to do those things.</p>
 								
 							</article>
 						<!-- achievements -->
