--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							<p>I have taken part in a range of activities throughout my scholastic career, such as Code battles, hackathons, IT Fests, Spots events, etc. These encounters have given me the chance to meet new people and make friends, and they have also given me the chance to build a diverse skill set that will assist me in my future endeavors. I think that participating in extracurricular activities is an essential part of the student experience, whether it be taking part in outdoor activities like sports or volunteering with a local organization.
 							</p>
 					
-							<p>For my achievements : <a href="Achievements.html">CLICK HERE</a></p> 
+							<p>For my achievements : <a href="Achievements.html"></a><u><i>Achievement list will be added soon</i></u></p> 
 						</article>
 						<!-- Skills -->
 							<article id="Skills">
