--- a/projects.html
+++ b/projects.html
@@ -67,7 +67,7 @@
 											 </a></h2><h4>CodeBattle: Student Hackathon</h4>
 									</header>
 									<a href="https://fourpawsco.netlify.app/" class="image fit"><img src="My work/fourpawsco.png" alt="" /></a>
-									<p>Credits: <br> Kushagra Kataria <br> Pranjal <br> Gary <br> Html5up </p>
+									<p>Credits: <br> Kushagra Kataria <br> Pranjal <br> Gary</p>
 									<ul class="actions special">
 
 									</ul>
