team members change

--- a/projects.html
+++ b/projects.html
@@ -67,7 +67,7 @@
 											 </a></h2><h4>CodeBattle: Student Hackathon</h4>
 									</header>
 									<a href="https://fourpawsco.netlify.app/" class="image fit"><img src="My work/fourpawsco.png" alt="" /></a>
-									<p>Credits: <br> Kushagra Kataria <br> Pranjal <br> Gary</p>
+									<p>Team members: <br> Pranjal <br> Gary</p>
 									<ul class="actions special">
 
 									</ul>
@@ -81,7 +81,7 @@
 									</header>
 									<a href="http://soundify1.netlify.app" class="image fit"><img src="My work/soundify.png" alt="" /></a>
 									<p></p>
-									<p>Credits: <br> Kushagra Kataria <br> Pranjal <br> Nehan <br> Gary <br> Odama Studio </p>
+									<p>Team members: <br> Pranjal <br> Nehan <br> Gary </p>
 									<ul class="actions special">
 
 									</ul>
@@ -97,7 +97,7 @@
   										src="https://www.youtube.com/embed/XrjgLw_iYzg" frameborder="0">
 									</iframe>
 									<p>Videography contest called the ‘Eye of Dubai’ hosted by Murdoch University Dubai in collaboration IDP Education</p>
-									<p>Credits: <br> Kushagra Kataria <br> Sachpreet Khokhar <br> Nevan John <br> Muhhmmed Rayan <br> Muhhmmad Daiyam
+									<p>Team members: <br> Sachpreet Khokhar <br> Nevan John <br> Muhhmmed Rayan <br> Muhhmmad Daiyam
 									</p>
 									<ul class="actions special">
 
@@ -114,7 +114,7 @@
   										src="https://www.youtube.com/embed/qXFDHQ99loA" frameborder="0">
 									</iframe>
 
-									<p>Credits: <br> Kushagra Kataria <br> Sachpreet Khokhar <br> Muhhmmed Ikram <br> Muhhmmed Rayan <br> Muhhmmad Daiyam
+									<p>Team members: <br> Sachpreet Khokhar <br> Muhhmmed Ikram <br> Muhhmmed Rayan <br> Muhhmmad Daiyam
 									</p>
 				
 								</article>
