--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
 										<h2><a href="#">DEWA<br />
 										</a></h2><h4>VARIABLE EV CHARGING ENABLED BY AI AND ROBOTICS
 										</h4>
-										<iframe id="ytplayer" type="text/html" width="640" height="360"
+										<iframe id="ytplayer" type="text/html"
 										src="https://www.youtube.com/embed/biVpq5wru4c" frameborder="0">
 								  </iframe>
 									</header>
@@ -93,7 +93,7 @@
 										<h2><a href="#"></a> Revolution Of Education<br />
 											</h2><h4>Eye of Dubai Videography Contest</h4>
 									</header>
-									<iframe id="ytplayer" type="text/html" width="640" height="360"
+									<iframe id="ytplayer" type="text/html" 
   										src="https://www.youtube.com/embed/XrjgLw_iYzg" frameborder="0">
 									</iframe>
 									<p>Videography contest called the ‘Eye of Dubai’ hosted by Murdoch University Dubai in collaboration IDP Education</p>
@@ -110,7 +110,7 @@
 										<h2><a href="#">Promo Video Contest<br/><br>
 										</a></h2>
 									</header>
-									<iframe id="ytplayer" type="text/html" width="640" height="360"
+									<iframe id="ytplayer" type="text/html" 
   										src="https://www.youtube.com/embed/qXFDHQ99loA" frameborder="0">
 									</iframe>
 
