--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<nav>
 							<ul>	
 								<li><a href="#intro">Intro</a></li>
-								<li><a href="#achievements">Achievements</a></li>
+								<li><a href="#Extracurriculars">Extracurriculars</a></li>
 								<li><a href="#Skills">Projects</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
@@ -48,14 +48,14 @@
 									This showcase not only displays my work but also gives me a chance to think back on my experiences and make plans for the future. I'm constantly trying to learn, develop, and get better, and I think that this portfolio will make it easier for me to do those things.</p>
 								
 							</article>
-						<!-- achievements -->
-						<article id="achievements">
-							<h2 class="major">Certifications/Participations</h2>
+						<!-- Extracurriculars -->
+						<article id="Extracurriculars">
+							<h2 class="major">Extracurriculars</h2>
 							<span class="image main"><img src="images/ACHIEVEMENTS.png" alt="" /></span>
 							<p>I have taken part in a range of activities throughout my scholastic career, such as Code battles, hackathons, IT Fests, Spots events, etc. These encounters have given me the chance to meet new people and make friends, and they have also given me the chance to build a diverse skill set that will assist me in my future endeavors. I think that participating in extracurricular activities is an essential part of the student experience, whether it be taking part in outdoor activities like sports or volunteering with a local organization.
 							</p>
 					
-							<p>For my achievements : <a href="Achievements.html"></a><u>CLICK HERE</u> <i>(Achievement list will be added soon)</i></p> 
+							<p>For my achievements/certerficates : <a href="Extra.html">CLICK</a></p> 
 						</article>
 						<!-- Skills -->
 							<article id="Skills">
