--- a/achievements.html
+++ b/achievements.html
@@ -17,7 +17,8 @@
 					<div id="intro">
 						<h1>My<br />
 						Achievements</h1>
-						<p>HERE, I WOULD LIKE TO SHARE WITH YOU <br> SOME OF THE ACCOMPLISHMENTS THAT I AM PROUD OF</p>
+						<p>"Fueling Ambition with Accomplishments"
+</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -34,7 +35,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">Please wait</span>
+									<span class="date"></span>
 									<h2><br />
 									</a></h2>
 									<p>ACHIEVEMENTS WILL BE UPDATED SOON</p>
@@ -44,6 +45,9 @@
 								<ul class="actions special">
 
 								</ul>
+							</article>
+							<article>
+								
 							</article>
 
 						
