--- a/Extra.html
+++ b/Extra.html
@@ -60,7 +60,7 @@
 								</article>
 
 								<article class="item thumb span-3">
-									<h2>Kingdom of the Wind</h2>
+									<h2>Ajman Police : innovation week</h2>
 									<a href="images/certi/certi (12).jpg" class="image"><img src="images/certi/certi (12).jpg" alt=""></a>
 								</article>
 
