--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 									Aside from my academic pursuits, I am also passionate about giving back to my community and looking for ways to make a positive impact in the world.
 							
-									Thank you for taking the time to read my About Me page. If you have any questions or would like to get in touch, please don't hesitate to reach out to me!
+									If you have any questions or would like to get in touch, please don't hesitate to reach out to me!
 
 								</p>
 							</article>
