--- a/Extra.html
+++ b/Extra.html
@@ -79,11 +79,13 @@
 								<article class="item thumb span-3"><h2>KenKen International championship 2019 (National rank 158)</h2><a href="images/certi/certi (8).jpg" class="image"><img src="images/certi/certi (8).jpg" alt=""></a></article>
 								<article class="item thumb span-2"><h2>FLL Regional Compitition</h2><a href="images/certi/certi (9).jpg" class="image"><img src="images/certi/certi (9).jpg" alt=""></a></article>
 								<article class="item thumb span-1"><h2>videography editing workshop </h2><a href="images/certi/certi (7).jpg" class="image"><img src="images/certi/certi (7).jpg" alt=""></a></article>
+								<article class="item thumb span-2"><h2>Table Tennis Silver(annual sports meet 2019)</h2><a href="images/certi/certi (2).jpg" class="image"><img src="images/certi/certi (2).jpg" alt=""></a></article>
+								<article class="item thumb span-1"><h2>Video Makind and animation compitition (Second) 2018</h2><a href="images/certi/certi (3).jpg" class="image"><img src="images/certi/certi (3).jpg" alt=""></a></article>
+								<article class="item thumb span-1"><h2>Murdoch University Hackathon</h2><a href="images/certi/MU.png" class="image"><img src="images/certi/MU.png" alt=""></a></article>
 								<article class="item thumb span-2"><h2>Google Digital Citizenship</h2><a href="images/certi/google.png" class="image"><img src="images/certi/google.png" alt=""></a></article>
 								<article class="item thumb span-1"><h2>drama competition (Third)</h2><a href="images/certi/certi (5).jpg" class="image"><img src="images/certi/certi (5).jpg" alt=""></a></article>
+								<article class="item thumb span-3"><h2>Yoga Session</h2><a href="images/certi/yoga.png" class="image"><img src="images/certi/yoga.png" alt=""></a></article>
 								<article class="item thumb span-2"><h2>robotics exhibition - creativity carnival</h2><a href="images/certi/certi (4).jpg" class="image"><img src="images/certi/certi (4).jpg" alt=""></a></article>
-								<article class="item thumb span-1"><h2>Video Makind and animation compitition (Second) 2018</h2><a href="images/certi/certi (3).jpg" class="image"><img src="images/certi/certi (3).jpg" alt=""></a></article>
-								<article class="item thumb span-2"><h2>Table Tennis Silver(annual sports meet 2019)</h2><a href="images/certi/certi (2).jpg" class="image"><img src="images/certi/certi (2).jpg" alt=""></a></article>
 								<article class="item thumb span-1"><h2>Innovation Pavilion</h2><a href="images/certi/certi (1).jpg" class="image"><img src="images/certi/certi (1).jpg" alt=""></a></article>
 
 							</div>
