--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<form method="post" action="#">
-								<form name="contact" netlify>
+								<!-- <form name="contact" netlify>
 									<p>
 										<label>Name <input type="text" name="name" /></label>
 									</p>
@@ -103,7 +103,7 @@
 										<button type="submit">Send</button>
 									</p>
 									</form>
-								</form>
+								</form> -->
 								<ul class="icons">
 									<li><a href="https://www.linkedin.com/in/kushagrakataria/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								
