--- a/projects.html
+++ b/projects.html
@@ -40,10 +40,13 @@
 								<h2><a href="#">GraphiTile<br />
 								</a></h2>
 								<p>Day to day products with recycled carbon:</p>
+
 							</header>
 							<a href="#" class="image main"><img src="images/projects/graphitile.jpg" alt="" /></a>
 							
 							<ul class="actions special">
+								Research Paper: <a href="https://drive.google.com/file/d/1ekUYmSmbLW0evfBRg8IuNjID-TMFPM7j/view?usp=drive_link">CLICK</a>
+								Hypothesis : <a href=" https://drive.google.com/file/d/17JzfZ9ZakJhinRPzHs2Wt5k44m2YUuo7/view?usp=drive_link">CLICK</a>
 								<!-- <li><a href="#" class="button large">Full Story</a></li> -->
 							</ul>
 						</article>
