--- a/projects.html
+++ b/projects.html
@@ -97,8 +97,9 @@
 									</header>
 									<a href='' class="image fit"><img src="My work/Edumile .png" alt="" /></a>
 									<p>Edumile is an app made for bringing all the underprivelaged people to attain education in this Competetive world.</p>
-									<p>Team members:
-										Pranjal
+									<p>Hosted by : Murdoch University,Dubai</p>
+									<p>Team members: <br>
+										Pranjal <br>
 										Gary</p>
 
 									<ul class="actions special">
