--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Portfolio</a>
+						<a href="index.html" class="logo">Back to portfolio</a>
 					</header>
 
 				<!-- Main -->
