--- a/Certi/index.html
+++ b/Certi/index.html
@@ -40,11 +40,12 @@
           <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
             <div id="filters" class="filters">
               <a href="#" data-filter="*" class="active">All</a>
-              <a href="#" data-filter=".award">Awards</a>
+              <!-- <a href="#" data-filter=".award">Awards</a>
               <a href="#" data-filter=".academics">Academics</a>
               <a href="#" data-filter=".sports">Sports</a>
               <a href="#" data-filter=".won">Won</a>
-              <a href="#" data-filter=".participation">Participation</a>
+              <a href="#" data-filter=".participation">Participation</a> -->
+              <a href="../index.html">Back~</a>
             </div>
           </div>
         </div>
