--- a/Certi/index.html
+++ b/Certi/index.html
@@ -56,6 +56,10 @@
         </div>
         <div class="item WorldRecord col-sm-6 col-md-4 col-lg-4 mb-4">
           <!-- WorldRecord -->
+          <img class="img-fluid" src="assets/img/certi/42.jpg">
+      </div>
+        <div class="item WorldRecord col-sm-6 col-md-4 col-lg-4 mb-4">
+          <!-- WorldRecord -->
           <img class="img-fluid" src="assets/img/certi/2.jpg">
       </div>
       <div class="item WorldRecord col-sm-6 col-md-4 col-lg-4 mb-4">
