--- a/Certi/index.html
+++ b/Certi/index.html
@@ -56,7 +56,7 @@
         </div>
         <div class="item WorldRecord col-sm-6 col-md-4 col-lg-4 mb-4">
           <!-- WorldRecord -->
-          <img class="img-fluid" src="assets/img/certi/42.jpg">
+          <img class="img-fluid" src="assets/img/certi/42.png">
       </div>
         <div class="item WorldRecord col-sm-6 col-md-4 col-lg-4 mb-4">
           <!-- WorldRecord -->
