back button certi

--- a/Certi/index.html
+++ b/Certi/index.html
@@ -45,8 +45,10 @@
               <a href="#" data-filter=".sports">Sports</a>
               <a href="#" data-filter=".won">Won</a>
               <a href="#" data-filter=".participation">Participation</a> -->
-              <a href="../index.html">Back~</a>
             </div>
+            <div class="wh1"> <h5><a href="../index.html">Back~</a></h5></div>
+            
+
           </div>
         </div>
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
