--- a/Certi/index.html
+++ b/Certi/index.html
@@ -81,6 +81,10 @@
         <img class="img-fluid" src="assets/img/certi/6.jpg">
     </div>
     <div class="item   col-sm-6 col-md-4 col-lg-4 mb-4">
+            
+      <img class="img-fluid" src="assets/img/certi/43.png">
+  </div>
+    <div class="item   col-sm-6 col-md-4 col-lg-4 mb-4">
         
       <img class="img-fluid" src="assets/img/certi/7.jpg">
   </div>
