--- a/Certi/index.html
+++ b/Certi/index.html
@@ -170,7 +170,7 @@
 
 
 
-<!-- <div class="item   col-sm-6 col-md-4 col-lg-4 mb-4">
+<div class="item   col-sm-6 col-md-4 col-lg-4 mb-4">
     
   <img class="img-fluid" src="assets/img/certi/21.jpg">
 </div>
@@ -249,7 +249,7 @@
 <div class="item   col-sm-6 col-md-4 col-lg-4 mb-4">
     
   <img class="img-fluid" src="assets/img/certi/40.png">
-</div> -->
+</div>
 
     </section><!-- End  Works Section -->
 
